General * Improved Styling for popup * Better alignment & less blank lines in Excel export * Open Exports in a new window/tab * Make Chart text easier to read * Do Not copy Project Code from Name DRRPP * Restrict fields for Organisation * Include DRRPP Manual * Dynamically Show/Hide Cook Island Fields * Fixes Project Themes data * Specific Styling for Reports & Charts * Additional Search fields * Rearrange Edit Button * Show styled Button for Save

--- a/static/themes/DRRPP/style.css
+++ b/static/themes/DRRPP/style.css
@@ -52,3 +52,16 @@ table.dataTable tr.even td.sorting_1 {
 .item-container label {
     font-weight: bold;
 }
+
+/* Report */
+div.chart-contents {
+    background-color: white;
+}
+/* Hide Report Options not needed in DRRPP */
+div#chart-opts,
+div.pivot-table-control,
+div.hide-chart,
+tr.report-fact-single-option,
+tr.report-show-totals-option {
+    display: none;
+}
